*Empty MediaWiki Message*

--- a/Puntland.mw
+++ b/Puntland.mw
@@ -56,28 +56,52 @@ Dawladda Puntland ee somaliyeed waxaa la asaasay 1998kii, waxaana asaasay isimo 
 ===Hormuudka===
 Madaxweynihii ugu horeeyay ee puntland woxoo ahaa Cabdullahi Yuusuf, waxaa ku xigay Maxamed Abdi Xaashi waxaa ku xigay Cade Muuse waxaa ku sii xigay Cabdiraxmaan Maxamuud faroole, Hadana waxaa xilka hayya Cabdiwali Maxamed Cali.
 
-== caasimada puntland ==
-
-Garoowe waa caasimadda Dawladda puntland ee somaliyeed, Garoowe ayaa waxay soo martay maraxalado kala gedisan. Haatanna waxay maraysaa heer keedii ugu sarreeyay. Magaalada Ayaa xarun u ah haayado dowliya iyo kuwa aan dowli ahayn,qunsuliyado,ururo maxali ah , kuwa NGO ah,radio stations,TV IWM.
-Garowe waxaa ku yaal Meelo aad iyo aad u qurxoon suuqaaq iyo bacadlayaal aad iyo aad u camiran Jawiga ayaa had iyo goorba ah mid aan qaboow saa'ida iyo kulayl saa'idana aan lahayn qorraxda ayaa inta badan waxaa ku dahaaran cadar iyo daruuro. 
+==Taariikhda==
+===Qarniga 20ka===
 Garowe waxaa kunool dad kor udhaafaya 257,300 waxaa lagu tilmaamaa magaalooyinka ugu kobaca badan soomaaliya.
 waa magaalo loo tago dalxiiso waxay leedahay meelo taarikhi ah oo aan lasookoobikarin
 
-== Dhismihii Dawladda ==
+=== caasimada puntland ===
+
+Garoowe waa caasimadda Dawladda puntland ee somaliyeed, Garoowe ayaa waxay soo martay maraxalado kala gedisan. Haatanna waxay maraysaa heer keedii ugu sarreeyay. Magaalada Ayaa xarun u ah haayado dowliya iyo kuwa aan dowli ahayn,qunsuliyado,ururo maxali ah , kuwa NGO ah,radio stations,TV IWM.
+Garowe waxaa ku yaal Meelo aad iyo aad u qurxoon suuqaaq iyo bacadlayaal aad iyo aad u camiran Jawiga ayaa had iyo goorba ah mid aan qaboow saa'ida iyo kulayl saa'idana aan lahayn qorraxda ayaa inta badan waxaa ku dahaaran cadar iyo daruuro. 
+
+===Qarnigii 21ka===
 Ka dib markii wadatashiyo badan ay yeesheen isimada, siyaasiyiinta, aqoonyahanka, ganacsatada, iyo qaybaha kala duwan ee bulshada ku nool goboladan, ayaa waxaa la go'aansaday in magaalada Garoowe lagu qabto shir loo wada dhan yahay kaasoo ujeedadiisu ay ahayd in la dhiso maamul dowlad goboleed. Islamarkaas waxaas ku soo biiray Gobolada Sanaag iyo Sool oo kula bahoobay Maamulaka cusub Goboladii laysku oran jiray Waqooyi Bari.
 
 Shirkaas waxaa ka soo baxay bartamihii 1998, Dowlad Goboleedka Puntland, taasoo leh sadexda awoodood oo kala ah, Golaha Wakiilada oo dhan 66 Xilibaan oo lab iyo dhedigba leh, Garsoorka , iyo Golaha Xukuumada oo leh Madaxwayne iyo madaxwayne ku-xigeen.
 
+== Dhismihii==
+===maamulka===
 Sida uu qeexayo Xeerka 1aad,. ee axdiga ku meel-gaarka ah ee lagu dhisay Puntland.
 
+===hubinta===
+'''Hubinta iyo controlka daawada'''
 
+Waxaa wasaarada u suurto gashey in la helo labo mashiin oo ah kuwa lagu baarey tayada daawada oo la dhigay Magaalada [[Bosaso]] (Dekada) iyo [[Garowe]].
+Waxaa ay wasaaradu magacowday gudi dib u eega nidaamyada ilaalinta kontoroolka daawada.
+Waxa socda dib u eegista iyo hirgelinta sharciga caafimaadka ,Waxa hirgeshey in la mamnuuco ka ganacsashada daawada qaaxada ee goobaha ganacsiga ah.
 
-== Waxqabadka Dawladda Puntland ==
+==Bulshada==
+===Hirgalinta===
+'''hirgalinta Siyaasadda (ISKA WAX U QABSO)'''
+
+Waxa wasaaraddu si fiican ugu wacyi gelisey bulshada reer Puntland ka qeyb qaadashada caafimaadka guud 
+Waxa ay wasaaraddu ka shaqeysay isku xirka Jaaliyada dibada ee reer Puntland si ay gacan fiican uga geystaan caafimaa
+
+===Qabiilada===
+Qabiilada ku nool Puntland waxaa ka mid ah Leelkase, Awrtable, Deshiishe, Majeerteen iyo [[reer darawiish]].
+
+===Calanka===
+Calanka Puntland waxay uu eegtahay calanka Uzbekistan iyo calanka Lesotho.
+
+== Waxqabadka ==
 [[WASAARADA ARRIMAHA GUDAHA PUNTLAND]]
 Miisaaniyadaha Degmooyinka.
 Markii u horaysay Wasaaradda Arrimaha Guduhu waxay ku guuleysatay inay Miisaaniyado u samayso qaar ka mid ah Degmooyinka Puntland walow aan Degmooyinka oo dhan loo samayn hadana waxaa loo sameeyey 9 Degmo o ka tirsan Degmooyinka Miisaaniyadaas oo isu dheeli tiraysa Dakhli & Khara.
 Waxayna ka kooban tahay Saadaasha/ Odorosida Dakhliga soo gelaya Degmooyinka ee la filayo & Kharashka ku baxaya hawlaha Degmadda taas oo sahashay in D/hoose lagula xisaabtamo Dakhliga soo galay & sida ay u kharash gareeyeen , Miisaaniyadda Degmooyinku waxay ka mid noqonayaan Dakhliga Guud ee Dowladda dhexe (GDP).
 
+===Goobaha===
 '''Liiska Degmooyinka loo sameeyey Miisaaniyadaha & Qiyaasta Kharash & Dakhli ee Degmooyinkaas'''
 
 # [[Garoowe]] 21,031,284,000
@@ -94,24 +118,13 @@ Degmadda Wadarta Guud ee Miisaaniyadda Sh.so/
 
 [[WASAARADA CAAFIMAKA PUNTLNAD]]
 
-'''Xaalada Guud ee Caafimaadka Puntland'''
-
+===Caafimaadka Puntland===
 Waxaa si joogta u shaqeynaya oo adeegyada caafimaadka joogta bixiyey 86 xarumaha hooyada iyo dhalaan, 8 Isbitaal heer gobol, 9 Isbitaal 7 xarumaha qaaxada, 5 xarumaha barista iyo la talinta cudurka Ej-Ay-Fii Aydhiska, 10 xarun oo caafimaad dhimirka, 6 xarun quudinta nafaqda iyo 212 Baro caafimaad.
 Xarumahaas caafimaadka waxa ay dhamaantood ku kala yaalan dhamaan degaanada Puntland heer gobol ilaa tuulo.
 Guud ahaan xaalada caafimaad ee dalka waa mid degan waxaana si dhameystiran loo xakameeyey cuduraddii dilaacey 3 bilood ee la soo dhaafey Dalgaalkii galmudug ka dacay waa la gu laayey puntland markaasna puntland way jabtey.
 
+===Kor u qaadista===
 '''Kor u qaadista wadashaqeynta hayadaha'''
 [[File:Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg|thumb|Dhulka [[Sool, Sanaag iyo Cayn]] waa dhul muransan]]
 
 Waxa la sameeyey nidaam wadashaqeyn hayadaha ka shaqeeya caafimaadka Puntland si wax ku ool u noqdaan mashaaricda ay nagalaa shaqeeyan Hayadaha caalamiga ah.
-
-'''Hubinta iyo controlka daawada'''
-
-Waxaa wasaarada u suurto gashey in la helo labo mashiin oo ah kuwa lagu baarey tayada daawada oo la dhigay Magaalada [[Bosaso]] (Dekada) iyo [[Garowe]].
-Waxaa ay wasaaradu magacowday gudi dib u eega nidaamyada ilaalinta kontoroolka daawada.
-Waxa socda dib u eegista iyo hirgelinta sharciga caafimaadka ,Waxa hirgeshey in la mamnuuco ka ganacsashada daawada qaaxada ee goobaha ganacsiga ah.
-
-'''hirgalinta Siyaasadda (ISKA WAX U QABSO)'''
-
-Waxa wasaaraddu si fiican ugu wacyi gelisey bulshada reer Puntland ka qeyb qaadashada caafimaadka guud 
-Waxa ay wasaaraddu ka shaqeysay isku xirka Jaaliyada dibada ee reer Puntland si ay gacan fiican uga geystaan caafimaa
