*Empty MediaWiki Message*

--- a/Somaliaaaa.mw
+++ b/Somaliaaaa.mw
@@ -191,8 +191,8 @@ Qarnigii 19ka ilaa tobanaadka 1920gii, Dalka Soomaalka waxaa hoogaaminjirey dawl
 * [[Aw Jaamac Seed Magan]] oo Cali-Geri aaha  
 * [[Oogle Magan]] oo Cali-Geri ahaa
 * [[Muse Waranle]] oo Reer-Hagar ahaa
-*[[Haji Firhad]], fiqishini - tol la dhulbahanteeyey (dhulbahantized) Hawiye
-*[[Haji Sudi]], tol la dhulbahanteeyey (dhulbahantized) isaaq - aden madobe
+*[[Haji Firhad]], fiqishini HabarGidir
+*[[Haji Sudi]], Isaaq Aadan Madoobe
 * [[Seeraar Shawe]] oo Jamac Siyaad ahaa
 * [[Nur Xiddig]] oo Wacays Adan ahaa
 * [[Xirsi  Jeedlade]] oo Qayaad ahaa
