/* Degmooyinka gobolka Bakool */

--- a/Bakool.mw
+++ b/Bakool.mw
@@ -52,10 +52,10 @@ Bakool waa gobol ka mid ah [[:Category:Gobolada Soomaaliya|Gobolada]] [[Soomaali
  
 * [[Xudur]]
 * [[Ceelbarde]]
-* tayeeglow
+* [[Tiyeegloow]]
 * [[Waajid]]
 * [[Yeed]]
-*[[Buuurdhuxunle]]
+* [[Buurdhuxunle]]
 Gobolkan waxaa magaala madaxdiisu waa xudur waana gobol Ilaahey ku maneysatey xoolaha nool iyo beeraha.
 Qabaa'ilada dago gobolkaan waa Digil iyo Mirifle oo si is la eg ugu degan gobolka.
 
