*Empty MediaWiki Message*

--- a/Template:Degmooyinka_Gobolka_Bakool.mw
+++ b/Template:Degmooyinka_Gobolka_Bakool.mw
@@ -7,10 +7,10 @@
 |list1 = {{Div col|colwidth=27em}}
 * [[Xudur]]
 * [[Ceelbarde]]
-* [[tayeeglow]]
+* [[Tiyeegloow]]
 * [[Waajid]]
 * [[Yeed]]
-* [[Buuurdhuxunle]]
+* [[Buurdhuxunle]]
 * [[Ceel lahelay]]
 * [[Xudur]]
 * [[Baydhabo]]
