--- a/Hobyo.mw
+++ b/Hobyo.mw
@@ -1,6 +1,6 @@
 
 
-Dagmada '''Hobyo''' Waa Dagma ka mid ah dagmooyinka gobola mudug somalia. Hobyo waxaa kataliyo Maamul Galmudug.Hobyo waxaa kutaala dakad qadiimi ah. 
+Dagmada '''Hobyo''' Waa Dagma ka mid ah dagmooyinka gobola mudug somalia. Hobyo waxaa katalin jirey Suldaan Ducaale Kaahiye Muxumad qarnigii 19aad ,hada waqtigaan la joogo waxey hoos timaada Maamulk Galmudug.Hobyo waxaa kutaala dakad qadiimi ah. 
 
 Magaca Hobyo marka uu baxay iyo sida uu u baxay midna si saxa looma yaqaan, hasayeeshe waxaa la sheegay in magacaas oo ah mid da’ weyn in loo maleynayo inu ka yimid laba ereay oo kala ah: “ Hoo Biyoh” sababtoo ah magaalada dhulka xeebta ayaa biyo aad u macaan oo wax ka yar laba feet lagu gaaro. Hobyo waa marso dabiici ah oo ganacsi iyo xiriir dheer la soo lahayd dalalka kulaala Bad Weynta Hindiya iyo Khaliijka . waa magaalo qadiimi ah qarniyo dhisan waa magaalo dhismo qadiimi ah leh magaalada hobyo waxaa dagan beesha reer xaaji suleymaan iyo sacad saciid ee  habargidir Kaliya  
 
