--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -17,3 +17,6 @@ Mandiraja waa magaalada Jawa Tengah, ee jasiradda Jawa, Indonesia. Magaaladu wax
 
 ==References==
 {{reflist}}
+
+[[en:Mandiraja, Banjarnegara]]
+[[id:Mandiraja, Banjarnegara]]
