*Empty MediaWiki Message*

--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -1,5 +1,5 @@
 {{Infobox settlement
-|official_name=Kecamatan Mandiraja
+|official_name=Kecamatan Mandiraja <br> Mandiraja sub-district
 |motto=Nyawiji bedane
 |image_seal=Logo mandiraja.gif
 |subdivision_type=Country
