*Empty MediaWiki Message*

--- a/Indunisiya.mw
+++ b/Indunisiya.mw
@@ -30,10 +30,10 @@
 |area_label2 = [[Water area|Water (%)]]
 |area_data2 = 4.85
 |percent_water =
-|population_census = 237,424,363<ref name="imf2"/>
-|population_census_year = 2011
+|population_census = 268,624,363<ref name="imf2"/>
+|population_census_year = 2020
 |population_census_rank = 4th
-|population_density_km2 = 124.66
+|population_density_km2 = auto
 |population_density_sq_mi = 322.87
 |population_density_rank = 84th
 |GDP_PPP_year = 2013
@@ -51,11 +51,11 @@
 |Gini = 35.6 <!--number only-->
 |Gini_ref = <ref name="wb-gini">{{cite web |url=http://data.worldbank.org/indicator/SI.POV.GINI/ |title=Gini Index |publisher=World Bank |accessdate=2 March 2011}}</ref>
 |Gini_rank =
-|HDI_year = 2012
+|HDI_year = 2019
 |HDI_change = increase <!--increase/decrease/steady-->
-|HDI = 0.629 <!--number only-->
+|HDI = 0.707 <!--number only-->
 |HDI_ref = <ref name="UNDP">{{cite web |title=Indonesia Country Profile: Human Development Indicators |accessdate=27 April 2013 |year=2012 |url=http://hdrstats.undp.org/en/countries/profiles/IDN.html}}</ref>
-|HDI_rank = 121st
+|HDI_rank = 113st
 |sovereignty_type = 
 |sovereignty_note = 
 |established_event2 = 
@@ -79,6 +79,7 @@ maqorin in diinta Islaamku ay tahay diinta dalka..
 
 
 [[File:President Suharto, 1993.jpg|thumb|right|Lo generau [[Suharto]] en [[1993]].]]
+
 == Deegaanka Indunisiya ==
 
 [[File:MPRDPRDPDBuilding.jpg|miniatyr|thumb|right|300px|Parlamentsbyggnaden i Jakarta.]]
