*Empty MediaWiki Message*

--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -3,7 +3,7 @@
 |motto=Nyawiji bedane
 |image_seal=Logo mandiraja.gif
 |subdivision_type=Country
-|subdivision_name=Indonesia
+|subdivision_name=Indunisiya
 |subdivision_type1=Province
 |subdivision_name1=Jawa Tengah
 |subdivision_type2=Regency
@@ -13,7 +13,7 @@
 |population_as_of=2019
 |website=https://mandiraja.banjarnegarakab.go.id
 }}
-Mandiraja waa magaalada Jawa Tengah, ee jasiradda Jawa, Indonesia. Magaaladu waxay lee dahay dhul ah 52,61 km waxyna lee da hay 65.515 qof deggan 2019.<ref>[https://banjarnegarakab.go.id Situs Resmi Kabupaten Banjarnegara] banjarnegarakab.go.id Di akses tanggal 20 August 2020.</ref>
+Mandiraja waa magaalada [[Jawa tengah]], ee jasiradda Jawa, [[Indunisiya]]. Magaaladu waxay lee dahay dhul ah 52,61 km waxyna lee da hay 65.515 qof deggan 2019.<ref>[https://banjarnegarakab.go.id Situs Resmi Kabupaten Banjarnegara] banjarnegarakab.go.id Di akses tanggal 20 August 2020.</ref>
 
 ==References==
 {{reflist}}
