--- a/Mandiraja,_Banjarnegara.mw
+++ b/Mandiraja,_Banjarnegara.mw
@@ -15,7 +15,7 @@
 }}
 Mandiraja waa magaalada [[Jawa tengah,]], ee jasiradda Jawa, [[Indunisiya]]. Magaaladu waxay lee dahay dhul ah 52,61 km waxyna lee da hay 65.515 qof deggan 2019.<ref>[https://banjarnegarakab.go.id Situs Resmi Kabupaten Banjarnegara] banjarnegarakab.go.id Di akses tanggal 20 August 2020.</ref>
 
-==References==
+==Tixraacyada==
 {{reflist}}
 
 [[en:Mandiraja, Banjarnegara]]
