*Empty MediaWiki Message*

--- a/Galcad.mw
+++ b/Galcad.mw
@@ -42,8 +42,9 @@ Shaqsiyaadka magaca leh ee kasoo jeeda degmada galcad
 2)	Gen. Hussein Kulmiye Afrah  
 3)	Dupateto: Ibrahim Sh.Cali Jeebe
 4)	Xildhibaan C/qaadir macalin Nuur
-5)    Legend Ibrahim Ahmed Xasan AL  Qazaali
+5)    Legend Ibrahim Ahmed Xasan Al qazaali
 
 W/D:Abshir Mo'allim Abdullahi 
 E-mail: Kaaliye25@gmail.com 
 Tel: 0615480094
+Tel: 0612466787
