*Empty MediaWiki Message*

--- a/Galcad.mw
+++ b/Galcad.mw
@@ -43,7 +43,11 @@ Shaqsiyaadka magaca leh ee kasoo jeeda degmada galcad
 3)	Dupateto: Ibrahim Sh.Cali Jeebe
 4)	Xildhibaan C/qaadir macalin Nuur
 5)    Legend Ibrahim Ahmed Xasan Al qazaali
-
+Daahir maxamuud dhagagadhere
+Yaasiin ibraahin cadow
+Daahir raanleey
+Jiinow aadan abdi
+Legend axmed fiiri
 W/D:Abshir Mo'allim Abdullahi 
 E-mail: Kaaliye25@gmail.com 
 Tel: 0615480094
