*Empty MediaWiki Message*

--- a/Galcad.mw
+++ b/Galcad.mw
@@ -42,16 +42,17 @@ Shaqsiyaadka magaca leh ee kasoo jeeda degmada galcad
 2)	Gen. Hussein Kulmiye Afrah  
 3)	Dupateto: Ibrahim Sh.Cali Jeebe
 4)	Xildhibaan C/qaadir macalin Nuur
-5)    Legend Ibrahim Ahmed Xasan Al qazaali
-Daahir maxamuud dhagagadhere
+5) Legend Ibrahim Ahmed Xasan Al qazaali
 
-Yaasiin ibraahin cadow
+6) Daahir maxamuud dhagagadhere
 
-Daahir raanleey
+7) Yaasiin ibraahin cadow
 
-Jiinow aadan abdi
+8) Daahir raanleey
 
-Legend axmed fiiri
+9) Jiinow aadan abdi
+
+10) Legend axmed fiiri
 
 W/D:Abshir Mo'allim Abdullahi 
 E-mail: Kaaliye25@gmail.com 
