--- a/Caasimad.mw
+++ b/Caasimad.mw
@@ -2,6 +2,7 @@
 ::''Haku khaldin "[[magaalo madax]]"
 [[File:Mogacapital.jpg|thumb|caasimada wadanka [[Soomaaliya]] ee [[Muqdisho]].]]
 [[File:DCmontage3.jpg|thumb|Caasimada dalka [[Maraykanka]].]]
+[[File:Tammerkoski from air.jpg|thumb|[[Tampere]], caasimada wadanka [[Finland]]]]
 '''Caasimad''' ([[ingiriis]]: city; [[carabi]]: مدينة) waa deegaan aad u balaadhan oo [[dad]] iyo duunyo ku dhaqan yahay. Sidoo kale, marar badan ereyga caasimad wuxuu u taagan yahay [[magaalo|magaalada]] saldhiga u ah [[dowlad]]a wadankaasi ama maamulkaasi. In kastoo, qaarada [[Afrika]] caasimadu tahay kaliya magaalada ugu weyn deegaankaasi, wadanada reer galbeedka ahi caasimad waxay u yaqaanaan deegaan aad u baladhan, leh dowlad hoose, dhaqaale fiican, isla markaana ay ku dhaqan yihiin dad faro badan.
 [[File:Lower_Manhattan_from_Jersey_City_November_2014_panorama_1.jpg|thumb|Lower Manhattan from Jersey City November 2014 panorama 1]]
 {{...}}
