+image #WPWPTR #WPWP

--- a/Abiy_Ahmed.mw
+++ b/Abiy_Ahmed.mw
@@ -1,3 +1,4 @@
+[[File:Abiy Ahmed 2019.jpg|thumb|200px|right|Abiy Ahmed Ali (2019)]]
 '''Abiy Ahmed Ali,''' {{Lang-am|አብይ አህመድ አሊ}}
 
 waa madaxweynaha hadda ee ethiopia, ethiopia oo xubin ka ah ururka africa, iyo bariga afrika ee bariga afrika oo loo yaqaan IGAD
