waxan aad u jecalahy inaan waxa qoro

--- a/Cilmi_Boodhari.mw
+++ b/Cilmi_Boodhari.mw
@@ -13,9 +13,12 @@ May daarin ciidee
 Indho deeraleeyey waxay ahay
 
 
-Cilmi waxa uu ah inan dhalinyar oo miyiga berbera ka yimi suu shaqo u helo
 
-== gabaygiisii ugu horeeyay ==
+Cilmi waxa uu ah inan dhalinyaro oo miyiga berbera ka yimi suu shaqo u helo, iyo nin ayaa u dheertahaya adkee iyo xoog alle u dhameeye
+
+waxuuna jecalaa markuu firaaqda  yahay in uu aad  waxa u Qoro.
+
+gabaygiisii ugu horeeyay waxuu ah ,
 
 Nimanyahow, dharaar iyo habeen waan dhadhabayaaye,
 
