*Empty MediaWiki Message*

--- a/Adhicadeeye.mw
+++ b/Adhicadeeye.mw
@@ -2,7 +2,7 @@
 
 Degmada Adhicadeeye waa mid caan ku ah xoolaha gaar ahaan Geela adhiga iyo fardaha.
 
-Degaanka waxa ku dhaqan beelwaynta Fiqishini Habargidir ee Hawiye.
+Degaanka waxa ku dhaqan beelwaynta Naleeye Ahmed ee [[reer darawiish]].
 
 ==Sidoo kale fiiri==
 *[[Liiska magaalooyinka Soomaaliya]]
