*Empty MediaWiki Message*

--- a/Tukaraq.mw
+++ b/Tukaraq.mw
@@ -1,4 +1,4 @@
-'''Tukaraq''' waa degaan ka tirsan gobolka [[Sool]] ee wadanka [[Somalia]]. Adhiya Cadeeye waxay dhacdaa 32 kilomitir waqooyiga magaalada [[Boocame]].  Degaanka Tukaraq waxa ku dhaqan beelwaynta Xasan Ugaas iyo Qayaad ee [[reer darawiish]].
+'''Tukaraq''' waa degaan ka tirsan gobolka [[Sool]] ee wadanka [[Somalia]]. Tukaraq waxay dhacdaa 32 kilomitir waqooyiga magaalada [[Boocame]].  Degaanka Tukaraq waxa ku dhaqan beelwaynta Xasan Ugaas iyo Qayaad ee [[reer darawiish]].
 
 ==Sidoo kale fiiri==
 *[[Liiska magaalooyinka Soomaaliya]]
