*Empty MediaWiki Message*

--- a/Garacad.mw
+++ b/Garacad.mw
@@ -58,7 +58,11 @@
 |website                = 
 |footnotes              = 
 }}
-'''Garacad''' Waa degaan xeebeed dhaca woqooyi bari Gobolka [[Mudug]] ee [[Soomaaliya]].
+'''Garacad''' Waa degaan xeebeed dhaca woqooyi bari Gobolka [[Mudug]], Puntland, [[Soomaaliya]]. Waxay ka tirsan tahay deegaannada hoos yimaada degmada Jarriiban. Garacad waxay caan ku tahay kalluumaysiga iyo kheyraadka badda.
+
+'''Garacad''' waxay Jarriiban u jirtaa qiyaastii 45 Km, Gaalkacyana waxay u jirtaa qiyaastii 208 Km.
+
+'''Garacad''' waxaa ka socda mashruuc isku-tashi bulsho ah oo lagu dhisayo deked caalami ah oo ay maraakiibta iyo doonyuhu ku soo xiran karaan (garacadseaport.com).
 
 
 
