/* Magaca */ Adnan Abdullahi Hussein

--- a/Dhuusamareeb.mw
+++ b/Dhuusamareeb.mw
@@ -125,7 +125,7 @@
 |footnotes              = 
 }}
 
-'''Dusmareeb ama Dhuusamareeb''', waa Magaalo madaxda [[Galguduud|Gobolka Galguduud]] ee Bartamaha Soomaaliya oo ah mid ka mid ah gobolada Soomaaliya kuwooda ugu baaxadda weeyn,waxaa ay ku burburtay dagaaladii sokeeye kabib balse haya ayay dhismaysaa dad ka ugucaan san waxaa kamid ah mahad khaliif shire oo ah aqoon yahan wax bartay iyo cabdikhani ilkacase mahamed khaliif shire catoosh abdikadir mahamed salad.
+'''Dusmareeb ama Dhuusamareeb''', waa Magaalo madaxda [[Galguduud|Gobolka Galguduud]] ee Bartamaha Soomaaliya oo ah mid ka mid ah gobolada Soomaaliya kuwooda ugu baaxadda weeyn,waxaa ay ku burburtay dagaaladii sokeeye kadib balse hada ayey dhismaysaa dadka ugu caansan waxaa kamid ah mahad khaliif shire oo ah aqoon yahan wax bartay iyo cabdikhani ilkacase mahamed khaliif shire catoosh abdikadir mahamed salad.
 
 == Magaca ==
 Magaceeda sida saxan ee uu awal aha waa Dusmo reeb, waqtiga socodkiisa ayaa wuxuu isu badalay dhuusa mareeb,
