--- a/Saldanadii_Cal_Miskaad.mw
+++ b/Saldanadii_Cal_Miskaad.mw
@@ -44,8 +44,8 @@
 |today                  = {{flag|Somalia}}
 }}
 
-'''Saldanadda Cal Miskaad''' ({{lang-so|''Sultanate of Cal Miskaad''}}, {{lang-ar| سلطنة المسكاد}}), sidoo kale loo yaqaanay '''Saldanadii Dishiishe''' ama '''Saldanadii Boosaaso''',<ref name="">http://www.somalitalk.com/2008/sept/10sep1808.html</ref> waxay ahayd Ugaastooyo [[Soomaali]] qarnigii 19aad ilaa qarnigii 20aad ka jirtey deegaanada galbeedka gobolka Bari, iyadoo markii dame awoodeedu ki fiday qaybo ka mid ah gobolka Sanaag.
-Waxaa aasaasey 1876-dii nin la odhan jirey Ugaas [[Cali Gurey]] oo ahaa dagaalyahan iyo gabyaa dhowr jeer dagaal la galay gumaystihii Talyaaniga. Awooda Saldanada waxaa lafdhabar u ahaa beesha Diishiishe.
+'''Saldanadda Cal Miskaad''' ({{lang-so|''Sultanate of Cal Miskaad''}}, {{lang-ar| سلطنة المسكاد}}), sidoo kale loo yaqaanay '''Saldanadii Dishiishe''' ama '''Saldanadii Boosaaso''',<ref name="">http://www.somalitalk.com/2008/sept/10sep1808.html</ref> waxay ahayd Ugaastooyo [[Soomaali]] qarnigii 19aad ilaa qarnigii 20aad ka jirtey deegaanada galbeedka gobolka Bari, iyadoo markii dame awoodeedu ku fiday qaybo ka mid ah gobolka Sanaag.
+Waxaa aasaasey 1876-dii Ugaas [[Cali Gurey]] oo ahaa, hoggaamiye, dagaalyahan iyo gabyaa dhowr jeer dagaal la galay gumaystihii Talyaaniga. Awooda Saldanada ee dhinac walba waxaa lafdhabar u ahaa beesha Diishiishe.
 
 ==Sidoo kale fiiri==
 *[[Saldanadii Cadal]]
