/* Tixraac */Dr Duceysane Samaan

--- a/Siyaasad.mw
+++ b/Siyaasad.mw
@@ -25,3 +25,5 @@ Madaama siyaasad eey Afka carabiga ka soo jeedo,Erayga  ugu dhaw ee  af-somaali 
 {{gumud}}
 {{commons|category:politic}}
 [[Category:Siyaasad]]
+
+Waxaa Ahay Dr Duceysane Samaan
