*Empty MediaWiki Message*

--- a/Rabdhuure.mw
+++ b/Rabdhuure.mw
@@ -3,6 +3,7 @@
 DEGMOIYINKA GOBOLKA BAKOOL dagamad washaqo somali 
 . Xudur 
 . Rabdhuure
+. Buurdhuxunle 
  . Ceelbarde
   .Wajid
    . Tiyeeglow  washaqo somalia 
