--- a/Murcanyo.mw
+++ b/Murcanyo.mw
@@ -10,7 +10,7 @@ Sannadkii 1872 waxaa magaalada degenaa dad lagu qiyaasaayay 600-700 oo qof. Maga
 Magaalada waxaa la asaasay qiyaastii [[1780[[ -[[1790]]  waxaa tiirkii ugu horeeyay ka taagay [[نون عثمان حامد]]  oo ahaa nin u dhashay Beesha Yuusuf Suldaan, Cismaan Maxamuud oo la oran jiray Faatax Faahiye Allaah
 
 ==Maamulka== 
-Bishii [[Abriil]] 8, [[2013]], dawladda Puntland waxay ku dhawaaqday abuuritaanka iskaashi goboleed cusub oo lala yeelanayo magaalada Murcanyo iyo [[Raas Caseyr]], iskaashi goboleedkaas oo loo magacaabay [[Gees Gardafuul]], waxayna ka kooban tahay 4 degmo. [[Cabdiraxmaan muuse cumar]] ayaa dowlad goboleedka u magacaawday in uu noqdo duqa degmada murcanyo, wuxuuna abuuray golaha degmada. Waxaa jira 9 tuulo hoostaga degmada murcanyo oo kala ah: 
+Bishii [[Abriil]] 8, [[2013]], dawladda Puntland waxay ku dhawaaqday abuuritaanka iskaashi goboleed cusub oo lala yeelanayo magaalada Murcanyo iyo [[Raas Caseyr]], iskaashi goboleedkaas oo loo magacaabay [[Gees Gardafuul]], waxayna ka kooban tahay 4 degmo. [[Dhagaweyne]] ayaa dowlad goboleedka u magacaawday in uu noqdo duqa degmada murcanyo, wuxuuna abuuray golaha degmada. Waxaa jira 9 tuulo hoostaga degmada murcanyo oo kala ah: 
 
 [[Gars]], [[Qajawe]], [[Dhurbo]], [[Galgala]] [[Geesaley]], [[Xaabo]], [[Tayeega]], [[Hoodaa]], [[Haqeyn]].
 
