--- a/Murcanyo.mw
+++ b/Murcanyo.mw
@@ -7,7 +7,7 @@
 Murcanyo waa magaalo xeebeed ka tirsan degaanka [[Caluula]], [[boosaaso]] waxay u jirta 79 mayl (127km), waa magaalo qadiimi ah.
 Sannadkii 1872 waxaa magaalada degenaa dad lagu qiyaasaayay 600-700 oo qof. Magaalada waxaa xilligaa xukumi jiray [[Suldaanada Majeerteen]]. Magaalada Waxay lahayd afar masaajid. Murcanyo waa tuulo si xawli u kortay, waxaana ku badan qabiilka Ideris Muuse.
 
-Magaalada waxaa la asaasay qiyaastii [[1780[[ -[[1790]]  waxaa tiirkii ugu horeeyay ka taagay [[نون عثمان حامد]]  oo ahaa nin u dhashay Beesha Yuusuf Suldaan, Cismaan Maxamuud oo la oran jiray Faatax Faahiye Allaah
+Magaalada waxaa la asaasay qiyaastii [[1780[[ -[[1790]]  waxaa tiirkii ugu horeeyay ka taagay oo ahaa nin u dhashay Beesha Yuusuf Suldaan, Cismaan Maxamuud oo la oran jiray Faatax Faahiye Allaah
 
 ==Maamulka== 
 Bishii [[Abriil]] 8, [[2013]], dawladda Puntland waxay ku dhawaaqday abuuritaanka iskaashi goboleed cusub oo lala yeelanayo magaalada Murcanyo iyo [[Raas Caseyr]], iskaashi goboleedkaas oo loo magacaabay [[Gees Gardafuul]], waxayna ka kooban tahay 4 degmo. [[Dhagaweyne]] ayaa dowlad goboleedka u magacaawday in uu noqdo duqa degmada murcanyo, wuxuuna abuuray golaha degmada. Waxaa jira 9 tuulo hoostaga degmada murcanyo oo kala ah: 
