--- a/Matabaan.mw
+++ b/Matabaan.mw
@@ -104,10 +104,10 @@ Dagmadu waxeey ka koobantahay  xaafad ahaan
 # Baliga
 # Filla baadiyo
 # ceelka biyaha ama Matoorka 9
-# Qabuuraha.
+# Qabuuraha Macalin Cumar.
 # C/salaan
 # Matabaan yare
-#xaafada macalin Adan 
+#xaafada macalin Adan
 
 == Taariikh ==
 Sida maglooyinka kale ee dalka, magalada waxa ka dhacay dagaalo badan oo qaba'il iyo waliba mid u dhaxeyay xogaga kale 1977 , [[Dagaalkii soomaalia iyo itoobiya|dagaalki Itoobiy iyo Soomaaliya]], Diayaradaha dagalka ee Itoobiya waxey si saa'id u duqeeyeen magaalda, kuwaas oo burbur u geystay magalada.
