--- a/Beesha_Bahsanbuur.mw
+++ b/Beesha_Bahsanbuur.mw
@@ -43,6 +43,7 @@ Kuwa ugu waaweyn, sidoo kale waxay degtaa beeshu degmooyinka
 
 ==dadka caanka ==
 Ragan wa kuwi xoreeyay s.alnd gaar ahan ceerigaabo
+* Xirsi Aftiir (Badmaax)
 *muj.Gadhle cirobay
 *muj.cabdilahi masyar
 *muj.binate samaysane
