--- a/Beesha_Bahsanbuur.mw
+++ b/Beesha_Bahsanbuur.mw
@@ -42,8 +42,9 @@ Kuwa ugu waaweyn, sidoo kale waxay degtaa beeshu degmooyinka
 ''''Erigavo sanaag somaliland'''.
 
 ==dadka caanka ==
+* Xirsi Aftiir (Badmaax) 
+Sayidku Gabaygiisi Kuso Qaatay Tuduc ka mid ah ( Waxaana Gaajooneen Ina Aftiir Iyo Gabanadiisa )
 Ragan wa kuwi xoreeyay s.alnd gaar ahan ceerigaabo
-* Xirsi Aftiir (Badmaax)
 *muj.Gadhle cirobay
 *muj.cabdilahi masyar
 *muj.binate samaysane
