--- a/Harti.mw
+++ b/Harti.mw
@@ -1,5 +1,6 @@
+[[File:Harti waqooyi iyo harti bari.png|thumb|Harti]]
 
-'''Harti''' ({{lang-en|''Hartie''}}, {{lang-ar|هارتي}}), micnaheedu tahay "nin adag", waa magaca looyaqaano beel ka mid ah [[Daarood]]ka.<ref>Drake-Brockman, p.55.</ref> oo kala ah Axmed Harti [[Dishiishe]], Maxamed Harti [[Majeerteen]], Siciid Harti [[Dhulbahante]], Maxamuud Harti [[Warsangeli]] Iyo beelo kale
+'''Harti''' ({{lang-en|''Hartie''}}, {{lang-ar|هارتي}}), micnaheedu tahay "nin adag", waa magaca looyaqaano beel ka mid ah [[Daarood]]ka.<ref>Drake-Brockman, p.55.</ref> oo kala ah Axmed Harti [[Dishiishe]], Maxamed Harti [[Majeerteen]], Siciid Harti [[reer darawiish]], Maxamuud Harti [[Warsangeli]] Iyo beelo kale
 
 ==Sharaxaad==
 Harti waxaa lagu naaneysaa harti koombe, waxaana ka mid ah [[Beesha Darawiish]], [[Majeerteen]], [[Dishiishe]] iyo [[Warsangeli]]ga. Jilibada oo Harti ah ee ugu weyn waa Biciidyahan (oo Majeerteen ah), Ugaadhyahan (oo [[reer darawiish]] ah), Siwaqroon (oo Majeerteen ah), Baharsame (oo [[reer darawiish]] ah), Wabeeneeye (oo majeerteen ah), Qayaad (oo [[reer daraawiish]] ah), Dubays (oo Warsangeli ah), Bah Nugal (oo [[reer darawish]] ah), Cismaan Maxamud (oo Majeerteen ah), Jama Siyad (oo [[reer daraawish]] ah), Cumar (oo Warsangeli ah), Reer Hagar (oo [[Reer Darawiish]] ah), Ogayslabe (oo Warsangeli ah), Cali Gheri (oo [[Reer Darwiish]] ah), Cawramale (oo Warsangeli ah), Hayaag (oo reer darawiish ah), Ciise Maxamud (oo Majeerteen ah), Ararsame (oo [[reer darwiish]] ah), Jibraahil (oo Majeerteen ah), Barkad (oo [[reer darawiish]] ah), Gumasoor (oo Majeerteen ah), Naleeye Axmed (oo [[reer daraawiish]] ah).<ref>Nuur, A., AfQarshe, A. D., Fiqiburaale, D., & Jaamac, A. (2013). Fardo-Cavalli.</ref>
