--- a/Template:Bedelid_portal_sawir2.mw
+++ b/Template:Bedelid_portal_sawir2.mw
@@ -11,7 +11,7 @@
 |}
 {| style="text-align: center; font-size: 100%; background-color: transparent"
 |-
-| [[file:Atributos formales o.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga_Portal/Kamida}} ]] <br /> 
+| [[file:U+25D0.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga_Portal/Kamida}} ]] <br /> 
 [{{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga_Portal/Kamida}} Wajiga]{{*}}
 | [[file: GreenButton Circle.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga1/Kamida}} ]] <br /> 
 [{{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga1/Kamida}} Wajiga1]{{*}}
