--- a/Template:Bedelid_portal_sawir2.mw
+++ b/Template:Bedelid_portal_sawir2.mw
@@ -36,7 +36,7 @@
 [{{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga9/Kamida}} Wajiga9]{{*}}
 | [[file:  Roche.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga10/Kamida}} ]] <br /> 
 [{{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga10/Kamida}} Wajiga10]{{*}}
-| [[file:  W2401-SymboleConduite.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga11/Kamida}} ]] <br /> 
+| [[file:SymboleConduite.svg|10px|img_frameless|border|link={{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga11/Kamida}} ]] <br /> 
 [{{server}}{{localurl:{{{page}}}|action=edit&preload{{=}}Template:Wajiga11/Kamida}} Wajiga11]
 |}
 {| style="text-align: center; font-size: 100%; background-color: transparent"
