*Empty MediaWiki Message*

--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -27,6 +27,7 @@ File:Gilbert Stuart Williamstown Portrait of George Washington.jpg |Madaxweynihi
 File:John F. Kennedy, White House color photo portrait.jpg |Madaxweynihii 35aad ee Maraykanka [[John F. Kennedy]]
 File:Hillary Clinton official Secretary of State portrait crop.jpg | Xoghayaha arimaha dibada Maraykanka Hillary Clinton
 File:GiseleBundchen.jpg
+File:Iggy Azalea August 2015.jpg | Caddaan cad [[Iggy Azalea]]
 </gallery>
 
 == Sidoo kale fiiri ==
