*Empty MediaWiki Message*

--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -28,6 +28,7 @@ File:John F. Kennedy, White House color photo portrait.jpg |Madaxweynihii 35aad 
 File:Hillary Clinton official Secretary of State portrait crop.jpg | Xoghayaha arimaha dibada Maraykanka Hillary Clinton
 File:GiseleBundchen.jpg
 File:Iggy Azalea August 2015.jpg | Caddaan cad [[Iggy Azalea]]
+File:Eminem live at D.C. 2014 (cropped).jpg | Caddaan cad [[Eminem]]
 </gallery>
 
 == Sidoo kale fiiri ==
