*Empty MediaWiki Message*

--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -29,6 +29,7 @@ File:Hillary Clinton official Secretary of State portrait crop.jpg | Xoghayaha a
 File:GiseleBundchen.jpg
 File:Iggy Azalea August 2015.jpg | Caddaan cad [[Iggy Azalea]]
 File:Eminem live at D.C. 2014 (cropped).jpg | Caddaan cad [[Eminem]]
+File:191125 Taylor Swift at the 2019 American Music Awards.png | Fanaan [[Taylor Swift]]
 </gallery>
 
 == Sidoo kale fiiri ==
