*Empty MediaWiki Message*

--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -30,6 +30,7 @@ File:GiseleBundchen.jpg
 File:Iggy Azalea August 2015.jpg | Caddaan cad [[Iggy Azalea]]
 File:Eminem live at D.C. 2014 (cropped).jpg | Caddaan cad [[Eminem]]
 File:191125 Taylor Swift at the 2019 American Music Awards.png | Fanaan [[Taylor Swift]]
+File:Justin Bieber in 2015.jpg | Fanaan [[Justin Bieber]]
 </gallery>
 
 == Sidoo kale fiiri ==
