--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -31,6 +31,7 @@ File:Iggy Azalea August 2015.jpg | Caddaan cad [[Iggy Azalea]]
 File:Eminem live at D.C. 2014 (cropped).jpg | Caddaan cad [[Eminem]]
 File:191125 Taylor Swift at the 2019 American Music Awards.png | Fanaan [[Taylor Swift]]
 File:Justin Bieber in 2015.jpg | Fanaan [[Justin Bieber]]
+File:The Monster Ball - Poker Face revamped2-tweak.jpg | Fanaan [[Lady Gaga]]
 </gallery>
 
 == Sidoo kale fiiri ==
