--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -32,6 +32,7 @@ File:Eminem live at D.C. 2014 (cropped).jpg | Caddaan cad [[Eminem]]
 File:191125 Taylor Swift at the 2019 American Music Awards.png | Fanaan [[Taylor Swift]]
 File:Justin Bieber in 2015.jpg | Fanaan [[Justin Bieber]]
 File:The Monster Ball - Poker Face revamped2-tweak.jpg | Fanaan [[Lady Gaga]]
+File:Donald Trump Arizona 2016.jpg | Madaxweynaha Mareykanka [[Donald Trump]]
 </gallery>
 
 == Sidoo kale fiiri ==
