*Empty MediaWiki Message*

--- a/Abaayo.mw
+++ b/Abaayo.mw
@@ -1,6 +1,8 @@
 [[File:Dache Sisters, Arba Minch (9707364421).jpg|right|200px]]
 [[File:Tigray Sisters, Nth Ethiopia (6788773846).jpg|right|200px]]
-'''Abaayo''' ({{lang-ar|شقيقة}} {{lang-it|sorella}} {{lang-en|sister}}) waa [[gabadh]]a [[walaal]]ka ah ee [[waalid]]kaa dhalay ([[hooyo]] iyo [[aabo]]). Abaayo waa qofta [[dhedig]] ee aad wada dhalateen, laga yaabaa in xaga [[hooyo|hooyada]] aad [[walaal]] ka tihiin ama dhanka [[aabo]] aad dhiig ka wadaagtaan. 
+'''Abaayo''' ({{lang-en|sister}}) ama walaasha waa qof oo dhalasho wadaag ku la ah ee dhedig ah. Qofka dhedig ah waa qof oo [[siil]] ama [[ilmogaleen]] saarka ku dhex yaal. 
+
+Walaasha ama abaayaha waa [[gabadh]]a [[walaal]]ka ah ee [[waalid]]kaa dhalay ([[hooyo]] iyo [[aabo]]). Abaayo waa qofta [[dhedig]] ee aad wada dhalateen, laga yaabaa in xaga [[hooyo|hooyada]] aad [[walaal]] ka tihiin ama dhanka [[aabo]] aad dhiig ka wadaagtaan. 
 
 Abaayo waxaa lid ku ah [[aboowe]]
 {{Qoys}}
