*Empty MediaWiki Message*

--- a/Aboowe.mw
+++ b/Aboowe.mw
@@ -1,5 +1,7 @@
 [[File:The desperate search for water in Turkana, Kenya (6220145484).jpg|right|200px]]
-'''Aboowe''' ({{lang-ar|شقيق}} {{lang-it|fratello}} {{lang-en|brother}}) waa [[wiil]]ka [[walaal]]ka ah ee [[waalid]]kaa dhalay ([[hooyo]] iyo [[aabo]]). Aboowe waa [[lab]] aad wada dhalateen, laga yaabaa in xaga [[hooyo|hooyada]] aad [[walaal]] ka tihiin ama dhanka [[aabo]] aad dhiig ka wadaagtaan. 
+'''Aboowe''' ({{lang-en|brother}}) ama '''walaalka''' ({{lang-en|brother}}) waa qof oo dhalasho wadaag ku la ah ee lab ah. Qofka lab ah waa qof oo [[gus]] ama [[xiniinyo]] saarka ku dhex yaal. 
+
+Aboowe ama walaalka waa [[wiil]]ka [[walaal]]ka ah ee [[waalid]]kaa dhalay ([[hooyo]] iyo [[aabo]]). Aboowe waa [[lab]] aad wada dhalateen, laga yaabaa in xaga [[hooyo|hooyada]] aad [[walaal]] ka tihiin ama dhanka [[aabo]] aad dhiig ka wadaagtaan. 
 {{Qoys}}
 {{Gumud}}
 
