--- a/Xiniinyaha.mw
+++ b/Xiniinyaha.mw
@@ -1,5 +1,1 @@
-[[File:Low hanging testicles.jpg|thumb|Xiniinyo oo hoos u laalaadeen waqtiga kulaylka]]
-
-'''Xiniinyaha''' (ingiriis testicles) wa qyeb laga helo jirka raga iyo xoolaha labood ah. Xiniinyaha [[biniaadan]] indhaha mala gu arki karo - sababta ah wexey gudaha ku jiraan [[maqaar]] oo boorso yar uu eg. Ujeedada xiniinyaha waxa weyaan iney [[manida]] sameeyaan.
-
-[[Category:Saxaax]]
+#redirect [[xiniinyo]]
