*Empty MediaWiki Message*

--- a/Daa'uud_Xirsi.mw
+++ b/Daa'uud_Xirsi.mw
@@ -1,39 +1,24 @@
-{{Macluumaad askariga
-| honorific_prefix  = Daud Abdulle Hirsi
-| name              = داود عبد الله حرسي
-| honorific_suffix  = Daud Abdulle Hirsi
-| native_name       = Somalia
-| native_name_lang  = som
-| image         =  Daud Abdulle Hirsi.jpg
-| image_size    = 300
-| alt           = el
-| caption       = Aas aasihii ciidanka xoogga dalka soomaaliyeed
-| birth_date    = {{Dhalashada iyo sanadka|1924|5|5}}
-| death_date    = {{Dhimashada iyo sanadka|1969|12|16|1924|05|05}}
-| birth_place   = [[Mareeg]] [[Galguduud]] [[Soomaaliya]]
-| death_place   = [[Moscow]] [[Russia]]
-| placeofburial = [[Muqdisho]]
-| placeofburial_label = Lagu aasay
-| placeofburial_coordinates = Qabuuraha Ciidanka xoogga
-| nickname      = 
-| birth_name    = [[Mareeg]]
-| allegiance    = Ciidanka
-| branch        = Xooga Dalka soomaaliya
-| serviceyears  = 1939-1965
-| rank          = Hogaanka guud ee ciidamada qalabka
-| servicenumber = 000B01
-| unit          = Xooga
-| commands      = 1954-1965
-| battles       = Dagaalkii 1964
-| battles_label = Hogaankii
+{{Taariikh Kooban
+| honorific_prefix  = Hamud Husein Duale
+| name              = Hamud Husein Duale
+| honorific_suffix  = Hamud Husein Duale
+| native_name       = Ethiopian
+| caption       = Aasaasaha ururada dhalinyarada Magaalada Tog-wajaale iyo tabare nololeed oo madaxbanaan [[independent social agent]]
+| birth_date    = {{Dhalashada iyo sanadka|1993|02|19}}
+| birth_place   = [[Tog-wajaale]] [[Gobolka Faafan]] [[Ethiopia]]
+| nickname      = Dualeh
+| birth_name    = [[wajaale]]
+| shaqada        = Madaxa shaqaalaha xafiiska dakhliga maamulka magaalada tog-wajaale
+| serviceyears  = 2019-2020
+| rank          = Human Resource Management
 | awards        = ?
 | spouse        = ? 
-| relations     = Saraakiil [[Talyaani]] iyo [[Ruush]]
-| laterwork     = Dhismaha ciidanka
+| relations     = Beeraha [[Tog-wajaale]] iyo [[Ethiopia]]
+| laterwork     = Technology Transfer (in laga gudbo dhaqamada hore loona gudbo kuwa casriga ah ee nidaamka beero falashada)
 | signature     = 
 | website       = <!-- {{URL|example.com}} -->
 }}
-'''General. Daauud Cabdulle Xirsi''' (1924-1965) wuxuu ahaa Janaraalkii ugu horeeye ee yeelato [[Soomaaliya]] isla markaasna ahaa taliyihii ugu horeeyey ee Ciidanka Xooga Dalka [[Soomaaliya|Soomaaliyeed]]. Janaraal Daauud wuxuu ku dhashay tuulada [[Mareeg]] ee ka tirsan gobolka [[Galguduud]] ee dalka [[Soomaaliya]] halkaas oo uu ku dhameeye aqoontiisa Qur'aanka asagoo da' yar ah. Mudo sanad ah asagoo ka shaqaynayaa xaafiiska Talyaaniga ee degmada [[Buuloburde]] ayuu wuxuu u gudbay magaalada [[Muqdisho]], xoogaa kahor intaan la gaarin Dagaalkii Labaad ee Aduunyada. 1943dii wuxuu ku biiray Ciidamada Booliska ee [[Ingiriiska]] oo markaas hayste koonfurta [[Soomaaliya]], Janaral Daauud waxaa uu ka gaare shaqadiisa ilaa barre (macalin) tababare ka ah Dugsiga Booliiska ee Xamarjajab.
+'''Aqoonyahan. Hamud Husein Duale''' (2019-2020) wuxuu yahay gadhwadeenka cududa shaqaalaha ee xafiiska dakhliga maamulka magaalada [[Tog-wajaale]] illaa hadana ah [[Madaxa shaqaalaha|xafiiska dakhliga wajaale]]. Sargaal Haamud wuxuu ku dhashay magaalada [[wajaale]] ee ka tirsan gobolka [[Faafan]] ee dawlada deegaanka soomaalida [[Ethiopia]] halkaas oo uu ku dhameeye aqoontiisa hoose iyo dhexeba [[Tog-wajaale]] ayuu wuxuu u gudbay magaalada [[jigjiga]], kadib waxaa uu galay jaamacada isagoo dhamaystay heerka koowaad kuliyada beeraha jaamacada [[Assosa University]] oo ku taala bishangul gumuz ee dalka [[Ethiopia]], Aqoonyahan Hamud waxaa uu ka bilaabay shaqadiisa barre (macalin) dugsiyada magaalada jigjiga iyo wajaalaba isagoo hada wada heer kii labaad aqoonta jaamacada jigjiga university.
 
 == Taliyihii ugu horeeye ==
 Dagaalkii labaad ee Aduunka kadib, horaantii 1950meeyadii ayaa taliskii [[Talyaaniga]] ku soo noqde koonfurta [[Soomaaliya]]ayaa Janaraal Daauud ku guulayte imtixaan uu u galay leyli sarkaal. Waxaana loo qaaday dalka [[Talyaaniga]] halkaas oo uu ku soo dhamaystey tababarkii ciidan ee sarkaalnimada.
