*Empty MediaWiki Message*

--- a/Wardheer.mw
+++ b/Wardheer.mw
@@ -9,7 +9,7 @@ Wardheer waxay magac ahaan la bahtahay qaybtii ingiriisku u bixiyey Reserve Area
 
 Gobolka Doollo wuxuu   xuduud la leeyahay gobolloda Togdheer, Sool,Nugaal, Mudug ,Galgaduud,Qoraxay,iyo Dhagaxbuur.
 
-Qabiilada daga:  waxaa daga qabiila badan oo soomaaliyeed. Balse waxaa ugu badan HARTI,Mareexaan,Makaahiil,Geri iyo madhibaan.
+Qabiilada daga:  waxaa daga qabiila badan oo soomaaliyeed. Balse waxaa ugu badan HARTI,Mareexaan,Makaahiil,Reer Sheekh Abbayoonis iyo madhibaan.
 
 Wuxuu gobolku ka koobanyahay 6 degmo, isagoo ah gobolka ugu balaaran Somali galbeed.
 
