--- a/Saraar.mw
+++ b/Saraar.mw
@@ -68,18 +68,17 @@
 |footnotes              = 
 }}
 {{Gobolada Soomaaliland}}
+Saraar waa degmo ee u dhexeysa Togdheer iyo gobolka [[Cayn]]. 
 
-==qabilada degan==
-*[[Reeryoonis]] 
-*[[cali barre]]
-*[[reeriidle]]
-*[[cumarjibriil]] 
-*[[Solomadow]] 
-*[[Sacad yoonis]]
+==Caasimada==
+Degmada '''Caynabo''' ayaa ah magalada caasimada u ah Gobolka saraar waana magalada ugu weyn, gobolka waxa ku yala   Banka saraar oo aad u Qurux badan xilliga roobka iyo barwaaqada. Waa mid weyn dherer iyo Ballac intu legyahay  waa kii Faysal Cumar Mushteeg lahaa. " '''Tan iyo xalay waan soo soconnee, Saraari ma jidkii Siraad baa".''' Waxa loogu wanqalay Gobolka Saraar oo ay Caasimad u tahay Degmada Caynaba. 
 
-Degmada '''Caynabo''' ayaa ah magalada 
-caasimada u ah Gobolka saraar waana magalada ugu weyn, gobolka waxa ku yala   Banka saraar oo aad u Qurux badan xilliga roobka iyo barwaaqada. Waa mid weyn dherer iyo Ballac intu legyahay  waa kii Faysal Cumar Mushteeg lahaa. " '''Tan iyo xalay waan soo soconnee, Saraari ma jidkii Siraad baa".''' Waxa loogu wanqalay Gobolka Saraar oo ay Caasimad u tahay Degmada Caynaba.
+==Qabiil==
+Waxaa Saraar ku nool habarjeclo dhinaca galbeedka iyo bartamaha; Saraar dhinaca bariga waxaa ku nool [[reer darawiish]].
 
+Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[Sacad yoonis]]
+
+==Tirada==
 Dadka ku nool waxa lagu qiyaasaa Gobolka Saraar ku dhawaad Boqol Kun. 50.000 waxa doorashada inay codeeyaan iska diiwaangaliyey 31-kun oo cod bixiye.wana gobolki ugu codka badna marka laga yimado 6da gobol ee waweyn. Waa gobol xoolo dhaqato, Beeralay, iyo Ganacsato.
 
 Waa ￼xaruntii Colkii Soocane ee Cumar Jibriil iyo [[reeryoonis]] ee uu Hoggaamiyaha ka ahaa [[Kite Fiqi]] Yuusuf ( Kite Fiqe) waa xarunt abwaankii iyo Abaanduulihii Geesiga ahaa [[Maxamuud Jaamac Nuux]] ( Maxamuud Daallin).
@@ -88,6 +87,7 @@ Xagga Ganacsiga waxa ka soo ￼jeeda [[Cabdi cawed cali (indhadeero)]] iyo Qaasi
 
 Xagga Diinta waxa ka soo jeeda [[Sheekh Cali Warsame]] oo ahaa Aasaasihii Al-itixaad qaybtii ￼ Soomaaliya.  
 
+==Caanbax==
 Mar kale Saraar waa ￼gurigii Dhaqanka Beelaha Habrjeclo iyo xaruntii dhaqanka. '''Suldaan Cali Muuse''' ayaa ka soo jeeda. Xilka waxa maanta haya '''Suldaan Cabdillaahi Suldaan Cali.''' '''Chief Caaqilkii guud Reer Yoonis ama Cismaan Yoonis Cheif Caaqil Maxamuud Xasan Bidde.''' 
 
 Halgankii SNM waxa ka soo jeeda Mujaahid '''Aadan Tarabbi Jaamac (Tuug-Tarabbi)''' oo ahaa aasaasihii Guutada 7-aad ee SNM. Guutaale oo ahaa ninkii ugu horreeyey ee qori gaadhi saara. Cabdiraxmaan Maxamed Case oo ahaa Taliyihii Guuto koowaad snm 
