*Empty MediaWiki Message*

--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -73,7 +73,7 @@
 |HDI_category =
 }} 
 '''Somaliland''' ({{lang-ar|صوماليلاند}}) sida dowliga ah loo yaqaano '''Jamhuuriyada Somaliland''', waa dowlad iskeed isugu dhawaaqday madaxbanaanid oo caalamka u aqoonsan ismaamul goboleed ka mid ah  Soomaaliya. 
-Somaliland waxee ku taala [[Geeska Afrika]], waxay xad la leedahay [[Djibouti|Jabuuti]], [[Itoobiya]] iyo [[Puntland]]. Somaliland waxey kamid tahay dhulkii soomaalida ee [[Ingiriis]]ku gumaysan jirey. Waxeyna xornimadda qaadatey [[Juun]] [[26]] [[1960]] afar maalmood ka dibna waxay la midowday Soomaliya inteeda kale oo [[Talyaani|Talyaanigu]] guumeysan jiray. [[Magaalo|magaalada]] caasimada wa [[Hargaysa]] oo ah caasimadda labaad ee [[Soomaaliya]]. [[Cabdiraxmaan Axmed Cali Tuur]] oo ahaan jirey hogaamiyihii Ururkii Dhaqdhaqaaqa Wadaniga Somaliyeed [[SNM]], ayaa loo doortay inuu noqdo madaxweynahii ugu horeeyay ee  maamulka Somaliland. Waxaa ku xigey [[Maxamed Xaaji Ibraahim Cigaal]]oo noqdey Madaxweynihii Labaad ee Somaliland, waxaana ka danbeeyay [[Daahir Rayaale Kaahin]]. Kahina waxa ku xigay [[Axmed Maxamed Maxamuud (Siilaanyo)]]. Madaxweynaha maanta waa [[Muuse Biixi Cabdi]]. Somaliland waxaa ka jira saddex xisbi siyaasadeed oo kala ah [[Kulmiye]], [[Wadani]] iyo [[UCID]].
+Somaliland waxee ku taala [[Geeska Afrika]], waxay xad la leedahay [[Djibouti|Jabuuti]], [[Itoobiya]] iyo [[Puntland]]. Somaliland iyo [[Jubaland]] waxey kamid ahaayeen dhulkii soomaalida ee [[Ingiriis]]ku gumaysan jirey. Waxeyna xornimadda qaadatey [[Juun]] [[26]] [[1960]] afar maalmood ka dibna waxay la midowday Soomaliya inteeda kale oo [[Talyaani|Talyaanigu]] guumeysan jiray. [[Magaalo|magaalada]] caasimada wa [[Hargaysa]] oo ah caasimadda labaad ee [[Soomaaliya]]. [[Cabdiraxmaan Axmed Cali Tuur]] oo ahaan jirey hogaamiyihii Ururkii Dhaqdhaqaaqa Wadaniga Somaliyeed [[SNM]], ayaa loo doortay inuu noqdo madaxweynahii ugu horeeyay ee  maamulka Somaliland. Waxaa ku xigey [[Maxamed Xaaji Ibraahim Cigaal]]oo noqdey Madaxweynihii Labaad ee Somaliland, waxaana ka danbeeyay [[Daahir Rayaale Kaahin]]. Kahina waxa ku xigay [[Axmed Maxamed Maxamuud (Siilaanyo)]]. Madaxweynaha maanta waa [[Muuse Biixi Cabdi]]. Somaliland waxaa ka jira saddex xisbi siyaasadeed oo kala ah [[Kulmiye]], [[Wadani]] iyo [[UCID]].
 ==Taariikhda==
 ::''Sidoo kale fiiri: [[Taariikhda Somaliland]]''
 {{Taariikhda Somaliland}}        
