--- a/Saraar.mw
+++ b/Saraar.mw
@@ -73,7 +73,7 @@ Saraar waa degmo ee u dhexeysa Togdheer iyo gobolka [[Cayn]].
 Degmada '''Caynabo''' ayaa ah magalada caasimada u ah Gobolka saraar waana magalada ugu weyn, gobolka waxa ku yala   Banka saraar oo aad u Qurux badan xilliga roobka iyo barwaaqada. Waa mid weyn dherer iyo Ballac intu legyahay  waa kii Faysal Cumar Mushteeg lahaa. " '''Tan iyo xalay waan soo soconnee, Saraari ma jidkii Siraad baa".''' Waxa loogu wanqalay Gobolka Saraar oo ay Caasimad u tahay Degmada Caynaba. 
 
 ==Qabiil==
-Waxaa Saraar ku nool habarjeclo dhinaca galbeedka iyo bartamaha; Saraar dhinaca bariga waxaa ku nool [[reer darawiish]].
+Waxaa Saraar ku nool habarjeclo dhinaca galbeedka iyo bartamaha; Saraar dhinaca bariga waxaa ku nool [[reer darawiish]]. Beelaha [[reer darawiish]] ee ku dhaqan Saraar waxay ku nool yihiin Guumays iyo tuulooyinka hareeraha Samala. 
 
 Laamaha HJ ee Saraar ku dhaqan waxaa ka mid ah [[Reeryoonis]]; [[cali barre]]; [[reeriidle]]; [[cumarjibriil]]; [[Solomadow]]; [[Sacad yoonis]]
 
