Noqay bedelaadka 205298 ee sameeyay  [[Special:Contributions/Nasib122|Nasib122]] ([[User talk:Nasib122|hadal]])

--- a/Harti.mw
+++ b/Harti.mw
@@ -1,3 +1,5 @@
+[[File:Harti waqooyi iyo harti bari.png|thumb|Harti]]
+
 '''Harti''' ({{lang-en|''Hartie''}}, {{lang-ar|هارتي}}), micnaheedu tahay "nin adag", waa magaca looyaqaano beel ka mid ah [[Daarood]]ka.<ref>Drake-Brockman, p.55.</ref> oo kala ah Axmed Harti [[Dishiishe]], Maxamed Harti [[Majeerteen]], Siciid Harti [[reer darawiish]], Maxamuud Harti [[Warsangeli]] Iyo beelo kale
 
 ==Sharaxaad==
