*Empty MediaWiki Message*

--- a/Meheri.mw
+++ b/Meheri.mw
@@ -36,8 +36,13 @@ Beesha Meheri  waxaa ka dhashay dad faro badan oo soomali magac ku lahaa sida Sa
   * Reer Jidxi 
   * Reer Cantuuni
   * Reer Caqiil
+
+  * Reer Xadrami
   * Reer Cafreer
   * Reer Albani
+
+
+ 
   
     
 <blockquote><br />
