--- a/Mahadaay_Weyn.mw
+++ b/Mahadaay_Weyn.mw
@@ -5,4 +5,5 @@ Gobolka shabeelaha dhexe wuxuu lahaan jiray warshado badan, waxaana ka mid ah wa
 
 {{Degmooyinka Gobolka Shabeellaha Dhexe}}
 iyo weliba Warshaddii hubka fudud iyo
-Rasaasta ee Dowlaadii Kacaanku ku Gumaaday Shacbiga #Somaliland
+Rasaasta ee Dowlaadii Kacaanku ku Gumaaday Shacbiga Somaliland
+Xasuuqaas oo keenay in reer somaliland la laabtan xorriyaddoodii Wax Qoray Caydaruus Cabdiraxmaan Daware
