*Empty MediaWiki Message*

--- a/Bariire.mw
+++ b/Bariire.mw
@@ -1,4 +1,5 @@
-'''Bariire''' waa degaan ku yaala gobolka [[Shabeelaha Hoose]] Afgooye wuxuu u jiraa ilaa 30 km, Waa dagmo aad uyar oo wali tiro koob rasmi ah laguma sameyn.
+'''Bariire''' waa degaan ku yaala gobolka [[Shabeelaha Hoose]] Afgooye wuxuu u jiraa ilaa 30 km, Waa dagmo aad uyar oo wali tiro koob rasmi ah laguma sameyn.barire waxaa dagan beel weenta abaajibil oo ka tirsan 8da aw digil waana dad caan ku ah tacbashada dalaga kala duwan iyo marti soor wanaagsan bariire waxey leedahay buundo asaasi u ah isu gudubka gobolka shabeelada hoose
+
 
 
 
